mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo-express
  namespace: default
  labels:
    app:  mongo-express
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 1
  template:
    metadata:
      labels:
        app:  mongo-express
    spec:
      containers:
      - name:  mongo-express
        image:  mongo-express
        ports:
        - containerPort:  8081
