mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongodb-deployment
  namespace: default
  labels:
    app:  mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app:  mongodb
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  mongodb
        image:  mongo
        ports:
        - containerPort:  27017
 
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: default
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
